<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_create_opp"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/create_opportunity" />
    <item
        android:id="@+id/nav_manage_opps"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/manage_opportunities" />
    <item
        android:id="@+id/nav_give_badges"
        android:icon="@drawable/ic_badge_hero"
        android:title="@string/give_badges" />
    <item
        android:id="@+id/nav_chats"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/chats" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/organization_profile" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />

</menu>