<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_admin_dashboard"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/admin_dashboard" />
    <item
        android:id="@+id/nav_manage_users"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/manage_users" />
    <item
        android:id="@+id/nav_manage_orgs"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/manage_organisations" />
    <item
        android:id="@+id/nav_blocked_users"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/blocked_users" />
    <item
        android:id="@+id/nav_admin_chats"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/chats" />
    <item
        android:id="@+id/nav_admin_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />

</menu>
